Upgrade to Java 17, latest dependencies and fix warnings and typos